# -vscode-empty-project-template

./: .bumpversion.cfg  CHANGELOG.md  CVERSION  README.md  Taskfile.yml  main.py  makefile-bump  makefile-tag   pyproject.toml  setup.cfg
.github/workflows/: basic.yml  main.yml
src/empty_project/: main.py
tests/: main_test.py
