[metadata]
name = empty-python-project
version = 0.1.2
description = Empty Python project template for VSCode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexchay/vscode-empty-python-project-template
author = ["Alexander Chaikovsky <alexchay@gmail.com>"]
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta,
    Programming Language :: Python,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Topic :: Software Development :: Libraries :: Python Modules,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License



[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*