[metadata]
name = python-project-template
version = 0.1.2
description = "Python project template"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexchay/vscode-empty-python-project-template
author = ["Alexander Chaikovsky <alexchay@gmail.com>"]
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta,
    Programming Language :: Python,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Topic :: Software Development :: Libraries :: Python Modules,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License



[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude =
    test*


[options.entry_points]
console_scripts =
    python-project = "python_project.main:main"


[coverage:run]
source = python_project
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/python_project
    */site-packages/python_project

######################
# Tool configuration #
######################

# [mypy]
# python_version = 3.10
# warn_unused_configs = True
# show_error_context = True
# pretty = True
# namespace_packages = True
# check_untyped_defs = True

# [flake8]
# max-line-length = 120

# [tool:pytest]
# testpaths = tests
# addopts = --cov --strict-markers
# xfail_strict = True
# addopts = --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=90 --cov-branch

# [coverage:run]
# source = src
# branch = True

# [coverage:report]
# show_missing = True
# skip_covered = True

# [coverage:paths]
# source =
#     src/imppkg
#     */site-packages/imppkg

# [tox:tox]
# envlist = py39,py310
# isolated_build = True

# [testenv]
# deps =
#     pytest
#     pytest-cov
# commands =
#     pytest {posargs}

# [testenv:typecheck]
# deps =
#     mypy
#     pytest
#     types-termcolor
# commands =
#     mypy --ignore-missing-imports {posargs:src test}

# [testenv:format]
# skip_install = True
# deps =
#     black
# commands =
#     black {posargs:--check --diff src test}

# [testenv:lint]
# skip_install = True
# deps =
#     flake8
#     flake8-bugbear
# commands =
#     flake8 {posargs:src test}